--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Small Data</a>
+                        <a class="page-scroll" href="#about">Small Data</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Highlights</a>
+                        <a class="page-scroll" href="#highlights">Highlights</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Papers</a>
+                        <a class="page-scroll" href="#papers">Papers</a>
                     </li>
                 </ul>
             </div>
@@ -90,7 +90,7 @@
     </header>
 
     <!-- Services Section -->
-    <section id="services">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -236,7 +236,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="highlights">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -441,7 +441,7 @@
                     <div class="team-member">
 
                         <a href="#pastmembers" class="portfolio-link" data-toggle="modal"><img src="img/team/past.png" class="img-responsive img-circle" alt=""></a>
-                        <h4></h4>
+                        <h4>Past Members</h4>
                         <p class="text-muted"></p>
 
                     </div>
@@ -458,36 +458,36 @@
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
+    <aside class="sponsors">
         <div class="container">
             <div class="row">
                 <div class="col-md-2 col-sm-4">
-                    <a href="#">
+                    <a href="http://www.nsf.gov/">
                         <img src="img/logos/nsf.png" style="height: 100px; height: 100px;" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm-4">
-                    <a href="#">
+                    <a href="http://www.nih.gov/">
                         <img src="img/logos/nih.png" style="height: 100px; height: 100px;" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm-4">
-                    <a href="#">
+                    <a href="http://www.rwjf.org/">
                         <img src="img/logos/robert.png" style="height: 100px; height: 100px;" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm-4">
-                    <a href="#">
+                    <a href="http://www.unitedhealthgroup.com/">
                         <img src="img/logos/uhg.png" style="height: 150px; height: 100px;" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm-4">
-                    <a href="#">
+                    <a href="https://www.google.com/">
                         <img src="img/logos/google.jpg" style="height: 100px; height: 100px;" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-2 col-sm-4">
-                    <a href="#">
+                    <a href="https://research.adobe.com/">
                         <img src="img/logos/adobe.png" style="height: 100px; height: 100px;" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
@@ -497,7 +497,7 @@
     </aside>
 
     <!-- Contact Section -->
-    <section id="contact" class="bg-light-gray">
+    <section id="papers" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -850,12 +850,76 @@ The ultimate goal is that the DMT will eventually lead to non-invasive mobile in
                         <div class="col-sm-3">
                             <div class="team-member">
 
-                                <a href="http://ebagdasa.me"><img style="height: 225px;" src="img/team/aliza.png" class="img-responsive img-circle" alt=""></a>
-                                <h4>ALiza</h4>
-                                <p class="text-muted" style="text-align: center">PhD Student</p>
+                                <a href=""><img style="height: 225px;" src="img/team/aliza.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>ALiza Lena Selter</h4>
+                                <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
 
                             </div>
                         </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/aaron.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Aaron Baum</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/anas.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Anas Bouzoubaa</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/diana.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Diana Freed</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/lucky.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Lucky Gunasekara</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/neil.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Neil Lakin</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/narumi.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Narumi Toida</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/judy.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Judy Wu</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
