--- a/index.html
+++ b/index.html
@@ -919,6 +919,15 @@ The ultimate goal is that the DMT will eventually lead to non-invasive mobile in
 
                             </div>
                         </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/michael_carroll.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Michael Carroll</h4>
+                                <p class="text-muted" style="text-align: center"></p>
+
+                            </div>
+                        </div>
 
                     </div>
                 </div>
