updated mobile version

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="intro-text">
                 <!--<div class="intro-lead-in">Welcome</div>-->
-                <div class="intro-heading">small data lab @ Cornell Tech</div>
+                <div class="intro-heading">small data lab <span class="textshow"><br class="textshow2" /> @ Cornell Tech </span></div>
                 <a href="#about" class="page-scroll btn btn-xl" style="color: black;">Tell Me More</a>
             </div>
         </div>
