remove extra semicolon

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <i class="fa fa-external-link fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Creating Access to Your Data for You</h4>
-                    <p class="text-muted">Small Data are the myriad of digital; traces we each generate everyday. Unfortunately, that data is often unavailable to us in a form that we can make sense of or act upon. Imagine a special kind of app running in the cloud that privately and securely turns your small data into big insights.</p>
+                    <p class="text-muted">Small Data are the myriad of digital traces we each generate everyday. Unfortunately, that data is often unavailable to us in a form that we can make sense of or act upon. Imagine a special kind of app running in the cloud that privately and securely turns your small data into big insights.</p>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
