updated mobile version

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                         <a href="http://jppollak.com"><img src="img/team/jp_new.png" class="img-responsive img-circle" alt=""></a>
-                        <h4>JP Polak</h4>
+                        <h4>JP Pollak</h4>
                         <p class="text-muted">Senior Researcher in residence</p>
 
                     </div>
