--- a/index.html
+++ b/index.html
@@ -428,6 +428,20 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
+                        <a href=""><img src="img/team/james.png" class="img-responsive img-circle" alt=""></a>
+                        <h4>James Kizer</h4>
+                        <p class="text-muted">Developer in residence</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <a href=""><img src="img/team/matt.png" class="img-responsive img-circle" alt=""></a>
+                        <h4>Matthew Griffith</h4>
+                        <p class="text-muted">Developer in residence</p>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="team-member">
 
                         <a href=""><img src="img/team/yulia.png" class="img-responsive img-circle" alt=""></a>
                         <h4>Yulia Reznik</h4>
@@ -1057,8 +1071,8 @@ Though the correspondence of features between the two SDKs isn’t one-to-one, t
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <!--<script src="js/jqBootstrapValidation.js"></script>-->
+    <!--<script src="js/contact_me.js"></script>-->
 
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
