--- a/index.html
+++ b/index.html
@@ -779,8 +779,14 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>Research Stack</h2>
-                                <a href="http://researchstack.org/">http://researchstack.org/</a>
-                                <img class="img-responsive img-centered" src="img/portfolio/suite.png" alt="">
+                                <a href="http://researchstack.org/">http://researchstack.org/</a><br/>
+
+                                <iframe
+                                        src="https://appetize.io/embed/ag_fbvk9j6frpkef41vkm63ge1ww0?device=iphone6&scale=75&autoplay=false&orientation=portrait&deviceColor=black"
+                                        width="312px"
+                                        height="653px" frameborder="0"
+                                        scrolling="no">
+                                </iframe>
 
                                 <h4>What is ResearchStack?</h4>
 <p>ResearchStack is an SDK and UX framework for building research study apps on Android.
