--- a/mobisys2018.html
+++ b/mobisys2018.html
@@ -78,7 +78,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner background-color-black">
-                <h1 style="color:black;">The 2<sup>nd</sup> Workshop on Digital Biomarkers 2018</h1>
+                <h1 style="color:white;"><b>The 2<sup>nd</sup> Workshop on Digital Biomarkers 2018</b></h1>
                 <hr>
                 <p style="background:black; color:white;"> The 2<sup>nd</sup> Workshop on Digital Biomarkers, collocated with MobiSys 2018 offers a unified forum that brings academics, industry researchers and medical practitioners together and seeks novel, innovative and exciting submissions broadly related to the modeling, testing, and validation of new digital biomarkers for predicting incidence of diseases, health conditions, effects of treatments, and interventions.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
