--- a/mobisys2018.html
+++ b/mobisys2018.html
@@ -155,9 +155,9 @@
                         <i class="fa fa-4x fa-calendar wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Important Dates</h3>
                         <ul class="text-left">
-                        <li> <p>Submission deadline: March 1, 2018</p></li>
-                        <li> <p>Notification deadline: March 8, 2018 </p></li>
-                        <li> <p>Camera-ready due: March 15, 2018 </p></li>
+                        <li> <p>Submission deadline: March 10, 2018, 11:59 PM EST/p></li>
+                        <li> <p>Notification deadline: April 10, 2018 </p></li>
+                        <li> <p>Camera-ready due: May 10, 2018 </p></li>
                         <li> <p>Workshop Date:  June 10, 2018 </p></li>
                         </ul>
                     </div>
