--- a/index.html
+++ b/index.html
@@ -547,7 +547,20 @@
                 <tbody>
                     <tr>
                         <td>
-                            <strong>Yum-me: A Personalized Nutrient-based Meal Recommender System. <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong>
+                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</a> In <i> Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            Alquaddoomi, F., Estrin, D.<i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management. 2018. To appear.</i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <strong>OpenRec: A Modular Framework for Extensible Recommendation Algorithms. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            Yang, L., Bagdasaryan, E., Gruenstein, J., Hsieh, C., Estrin, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>. 2018. To appear.</i><a href="http://openrec.ai">openrec.ai</a>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <strong>Yum-me: A Personalized Nutrient-based Meal Recommender System. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangYumme.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong>
                             </br>
                             YANG, L., HSIEH, C., YANG, H., POLLAK, JP, DELL, N., Belongie, S., COLE, C.,  ESTRIN, D.,
 
@@ -558,7 +571,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Personalizing Software and Web Services by Integrating Unstructured Application Usage Traces. <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            <strong>Personalizing Software and Web Services by Integrating Unstructured Application Usage Traces. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangFJHE17.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
                             YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.  <i>In Proceedings of 26th International World Wide Web Conference <strong>(WWW)</strong>, Perth, Australia, April 2017.</i>
 
                         </td>
@@ -566,7 +579,7 @@
                     <tr>
 
                         <td>
-                            <strong>Collaborative Metric Learning. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Collaborative Metric Learning. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/HsiehYCLBE17.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             HSIEH, C.H., YANG, L., CUI, Y., LIN, T.Y., BELONGIE, S., ESTRIN, D., 26th International World Wide Web Conference <strong>(WWW)</strong>, Perth, Australia, April 2017.
 
@@ -575,14 +588,14 @@
                     <tr>
 
                         <td>
-                            <strong>The Pace of Technologic Change: Implications for Digital Health Behavior Intervention Research. <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            <strong>The Pace of Technologic Change: Implications for Digital Health Behavior Intervention Research. <a href="http://ac.els-cdn.com/S0749379716301386/1-s2.0-S0749379716301386-main.pdf?_tid=5b6bbd2c-034f-11e7-900c-00000aab0f6c&acdnat=1488902683_43349dedd6f50454b9281cf8f4b59871" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
                             PATRICK, K., HEKLER, E.B, ESTRIN, D., MOHR, D.C., RIPER, H., CRANE, D., GODINO, J., RILEY, W.T., <i>American Journal of Preventive Medicine. 2016 Nov; 51(5):816-824.</i>
 
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <strong>Internet Scale Research Studies using SDL-RX. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Internet Scale Research Studies using SDL-RX. </strong><a href="https://arxiv.org/pdf/1609.09767.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             KIZER, J., SAHUGUET, A., LAKIN, N., CARROLL, M., POLLAK, JP AND ESTRIN, D.  <i> Presented at the Data For Good Exchange, September, 2016.</i>
 
@@ -590,7 +603,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong> Your Activities of Daily Living (YADL): An Image-based Survey Technique for Patients with Arthritis. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong> Your Activities of Daily Living (YADL): An Image-based Survey Technique for Patients with Arthritis. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/YangFWWPE16.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             YANG, L., FREED, D., WU, A., WU, J., POLLAK, JP. AND ESTRIN, D. <i> In Proceedings of the 10th International Conference on Pervasive Computing Technologies for Healthcare, Cancun, Mexico, May 2016.</i>
 
@@ -598,7 +611,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Leveraging Multi-Modal Sensing for Mobile Health: a Case Review in Chronic Pain. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Leveraging Multi-Modal Sensing for Mobile Health: a Case Review in Chronic Pain. </strong><a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?reload=true&arnumber=7466807" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             AUNG, M. S. H., ALQUADDOOMI, F., HSIEH, A., RABBI, M., YANG, L., POLLAK, J.P., ESTRIN, D. and CHOUDHURY, T. <i>IEEE Journal of Selected Topics in Signal Processing. 2016 Aug; 10(5): 962-974.</i>
 
@@ -606,7 +619,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Immersive Recommendation: News and Event Recommendations Using Personal Digital Traces. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Immersive Recommendation: News and Event Recommendations Using Personal Digital Traces. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/HsiehYWNE16.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             HSIEH, C.K., YANG, L., WEI, H., NAAMAN, M. AND ESTRIN, D.  <i> In Proceedings of the 25th International World Wide Web Conference <strong>(WWW)</strong>, Montréal, Quèbec, Canada, April 2016.</i>
 
@@ -614,7 +627,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>GroupLink: Group Event Recommendations Using Personal Digital Traces. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>GroupLink: Group Event Recommendations Using Personal Digital Traces. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/WeiYHE16.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             Wei, H., Hsieh, C., Yang, L., Estrin, D., <i>In the 19th ACM Conference on Computer Supported Cooperative Work and Social Computing <strong>(CSCW’16)</strong>, 2016</i>
 
@@ -623,7 +636,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Reassembling Our Digital Selves. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Reassembling Our Digital Selves. </strong><a href="http://www.mitpressjournals.org/toc/daed/145/1" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             ESTRIN, D. AND JUELS, A. 2016 Winter. <i> Daedalus, 145, 1 , 43-53 (doi: 10.1162/DAED_a_00364).</i>
 
@@ -631,7 +644,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Smartphone Data in Rheumatoid Arthritis - What Do Rheumatologists Want?</strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Smartphone Data in Rheumatoid Arthritis - What Do Rheumatologists Want?</strong><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4765698/" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             SAY, P.R., STEIN, D., ANCKER J.S., HSIEH A, POLLAK JP. AND ESTRIN, D. <i> In Proceedings of the AMIA Annual Symposium, San Francisco, CA, November 2015.</i>
 
@@ -640,7 +653,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>PlateClick: Bootstrapping Food Preferences Through an Adaptive Visual Interface. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>PlateClick: Bootstrapping Food Preferences Through an Adaptive Visual Interface. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/HsiehYWNE16.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             YANG, L., CUI, Y., ZHANG, F., POLLAK, JP., BELONGIE, S. AND ESTRIN, D. <i>In Proceedings of the 24th ACM International Conference on Information and Knowledge Management <strong>(CIKM)</strong>, Melbourne, Australia, October 2015</i>
 
@@ -649,7 +662,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Beyond Classification: Latent User Interests Profiling from Visual Contents Analysis. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Beyond Classification: Latent User Interests Profiling from Visual Contents Analysis. </strong><a href="https://www.researchgate.net/profile/Deborah_Estrin2/publication/287853531_Beyond_Classification_Latent_User_Interests_Profiling_from_Visual_Contents_Analysis/links/58974f8e4585158bf6f59845/Beyond-Classification-Latent-User-Interests-Profiling-from-Visual-Contents-Analysis.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             YANG, L., HSIEH, C. AND ESTRIN, D., <i>In Proceedings of Data Mining Workshop <strong>(ICDMW)</strong>, IEEE International Conference. 2015</i>
 
@@ -673,7 +686,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>The Email Analysis Framework: Aiding the analysis of personal natural language texts. </strong> <a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>The Email Analysis Framework: Aiding the analysis of personal natural language texts. </strong> <a href="http://ceur-ws.org/Vol-1210/LQS_02.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             ALQUADDOOMI, F., KETCHAM, C. and ESTRIN, D. <i> In Workshop on Linking The Quantified Self <strong>(LinkQS)</strong>, Santiago, Chile, 2014</i>
 
@@ -682,7 +695,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Lifestreams: A Modular Sense-making Toolset for Identifying Important Patterns from Everyday Life. </strong><a href="" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Lifestreams: A Modular Sense-making Toolset for Identifying Important Patterns from Everyday Life. </strong><a href="https://pdfs.semanticscholar.org/04c6/7ea5c2d5456a0acd50aa09a346de98992520.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             HSIEH, C.K., TANGMURARUNKIT, H., ALQUADDOOMI, F., JENKINS, J., KANG, J., KETCHAM, C., LONGSTAFF, B., SELSKY, J., SWENDEMAN, D., ESTRIN, D. AND RAMANATHAN, N. <i> In Proceedings of the 11th ACM Conference on Embedded Networked Sensor Systems <strong>(SenSys)</strong>, Rome Italy, November 2013.</i>
 
