--- a/index.html
+++ b/index.html
@@ -547,14 +547,14 @@
                 <tbody>
                     <tr>
                         <td>
-                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</a> In <i> Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</a> In <i> Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management </br>
                             Alquaddoomi, F., Estrin, D.<i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management. 2018. To appear.</i>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <strong>OpenRec: A Modular Framework for Extensible Recommendation Algorithms. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                            Yang, L., Bagdasaryan, E., Gruenstein, J., Hsieh, C., Estrin, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>. 2018. To appear.</i><a href="http://openrec.ai">openrec.ai</a>
+                            Yang, L., Bagdasaryan, E., Gruenstein, J., Hsieh, C., Estrin, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>. 2018. To appear.</i><a href="http://openrec.ai" style="color:black">openrec.ai</a>
 
                         </td>
                     </tr>
