--- a/index.html
+++ b/index.html
@@ -547,8 +547,8 @@
                 <tbody>
                     <tr>
                         <td>
-                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</a> In <i> Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management </br>
-                            Alquaddoomi, F., Estrin, D.<i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management. 2018. To appear.</i>
+                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</strong></br>
+                            Alquaddoomi, F., Estrin, D. <i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management</i> 2018. To appear.
                         </td>
                     </tr>
                     <tr>
