--- a/mobisys2018.html
+++ b/mobisys2018.html
@@ -315,7 +315,7 @@
                         <img class="img-circle" src="./img/organizers/tauhidur.jpg" alt="Rounded image" width="150" height="150">
                         <h3><a href="https://sites.google.com/site/trahman266/">Tauhidur Rahman</a></h3>
                         <p>Assistant Professor</p>
-                        <p>College of Information & Computer Science, UMass Amherst</p>
+                        <p>College of Information & Computer Sciences, University of Massachussetts Amherst</p>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center">
@@ -346,14 +346,13 @@
               <ul>
                      <li><p><a href="http://www.cs.dartmouth.edu/~campbell/">Andrew Campbell</a>, Google and Dartmouth College</p></li>
                      <li> <p><a href="http://www.cs.cornell.edu/~tanzeem/">Tanzeem Choudhury</a>, Cornell University and Health Rhythms </p></li>
-                     <li><p><a>Deepak Ganesan</a>,UMass Amherst</p></li>
+                     <li><p><a href="https://people.cs.umass.edu/~dganesan/">Deepak Ganesan</a>, University of Massachussets Amherst</p></li>
                      <li><p><a href="https://www.microsoft.com/en-us/research/people/marycz/">Mary Czerwinski</a>, Microsoft Research</p></li>
-                     <li><p><a>Nic Lane</a>,University of Oxford and Nokia Bell Labs</p></li>
+                     <li><p><a href="http://niclane.org/">Nic Lane</a>,University of Oxford and Nokia Bell Labs</p></li>
                      <li><p><a href="http://www.cl.cam.ac.uk/~cm542/">Cecilia Mascolo</a>, University of Cambridge</p></li>
-                     <li><p><a>Mirco Musolesi</a>, University College London</p></li>
-                     <li><p><a>Abhishek Pratap</a>, Sage Bionetworks</p></li>
-                     <li><p><a>Mani Srivastava</a>, UCLA </p></li>
- 
+                     <li><p><a href="http://www.ucl.ac.uk/~ucfamus/">Mirco Musolesi</a>, University College London</p></li>
+                     <li><p><a href="https://www.linkedin.com/in/abhishekpratap">Abhishek Pratap</a>, Sage Bionetworks</p></li>
+                     <li><p><a href="http://www.ee.ucla.edu/mani-srivastava/">Mani Srivastava</a>, University of California Los Angeles </p></li>
                 </ul>
             </div>
         </div>
