update mobisys submission link

--- a/mobisys2018.html
+++ b/mobisys2018.html
@@ -179,7 +179,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-cloud-upload wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Submission</h3>
-                        <p> The workshop accepts papers describing complete as well as novel work-in-progress studies. Submission link is <a href="http://www.sigmobile.org/mobisys/2017/submission.php"> here</a>.</p>
+                        <p> The workshop accepts papers describing complete as well as novel work-in-progress studies. Submission link is <a href="https://easychair.org/conferences/?conf=digibiomarkers2018"> here</a>.</p>
                     </div>
                 </div>
 
