--- a/mobisys2018.html
+++ b/mobisys2018.html
@@ -169,7 +169,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Paper Format</h3>
-                        <p>All submissions must be original work not under review at any other workshop, conference, or journal. In addition to complete work, the workshop also encourages innovative work-in-progress submissions. Submissions must be 4-6 pages in length and must be a PDF file. Submissions must follow the formatting guidelines at <a href="https://www.sigmobile.org/mobisys/2018/submission/">http://www.sigmobile.org/mobisys/2017/submission.php</a>.
+                        <p>All submissions must be original work not under review at any other workshop, conference, or journal. In addition to complete work, the workshop also encourages innovative work-in-progress submissions. Submissions must be 4-6 pages in length and must be a PDF file. Submissions must follow the formatting guidelines at <a href="https://www.sigmobile.org/mobisys/2018/submission/">https://www.sigmobile.org/mobisys/2018/submission/</a>.
                         </p>
                     </div>
                 </div>
