--- a/index.html
+++ b/index.html
@@ -547,14 +547,20 @@
                 <tbody>
                     <tr>
                         <td>
+                            <strong> Towards A Framework for Mobile Behavior Change Research.</strong></br>
+                            OKEKE, F., SOBOLEV, M., ESTRIN, D. <i>In Technology, Mind, and Society: APAScience, Washington DC, USA, April 2018</i> 
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</strong></br>
-                            Alquaddoomi, F., Estrin, D. <i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management</i> 2018. To appear.
+                            ALQUADDOOMI, F., ESTRIN, D. <i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management, 2018.</i> 
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <strong>OpenRec: A Modular Framework for Extensible Recommendation Algorithms. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                            Yang, L., Bagdasaryan, E., Gruenstein, J., Hsieh, C., Estrin, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>. 2018. To appear.</i><a href="http://openrec.ai" style="color:black">openrec.ai</a>
+                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>. 2018. To appear.</i><a href="http://openrec.ai" style="color:black">openrec.ai</a>
 
                         </td>
                     </tr>
