--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <tr>
                         <td>
                             <strong>OpenRec: A Modular Framework for Extensible Recommendation Algorithms. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>. 2018. To appear.</i><a href="http://openrec.ai" style="color:black">openrec.ai</a>
+                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>, 2018.</i><a href="http://openrec.ai" style="color:black">openrec.ai</a>
 
                         </td>
                     </tr>
